@@ -1207,6 +1207,7 @@
                 <forkCount>2</forkCount>
                 <reuseForks>false</reuseForks>
                 <trimStackTrace>false</trimStackTrace>
+                <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.desktop/java.awt.font=ALL-UNNAMED  --add-opens=java.desktop/sun.awt.image=ALL-UNNAMED --add-opens=java.naming/com.sun.jndi.ldap=ALL-UNNAMED</argLine>
                 <systemPropertyVariables>
                   <!-- remove when it's not necessary anymore for Java 25 -->
                   <net.bytebuddy.experimental>true</net.bytebuddy.experimental>
